transparent text bug on mobile - reverted to normal

--- a/frontend/src/styles/hero.scss
+++ b/frontend/src/styles/hero.scss
@@ -21,7 +21,7 @@
   align-items: center;
   z-index: 1;
   text-align: center;
-  color: rgba(255, 255, 255, 0.7);
+  color: rgba(255, 255, 255);
   width: 100%;
   height: 70%;
   padding-bottom: 100px;
